--- a/typst.toml
+++ b/typst.toml
@@ -1,20 +1,20 @@
 # for a description of available keys, see https://github.com/typst/packages/?tab=readme-ov-file#package-format
 
 [package]
-name = "PACKAGE"
+name = "etikett"
 version = "0.0.1"
 entrypoint = "src/lib.typ"
 authors = [
   "Clemens Koza <https://github.com/SillyFreak/>"
 ]
 license = "MIT"
-description = "my package"
+description = "a template for printing onto label sheets with rectangular grids of labels"
 # homepage = ""
-repository = "https://github.com/SillyFreak/typst-PACKAGE"
-keywords = []
-categories = []
+repository = "https://github.com/SillyFreak/typst-etikett"
+keywords = ["printing", "label"]
+categories = ["layout", "office"]
 disciplines = []
-# compiler = ""
+compiler = "0.12.0"
 exclude = [
   ".github",
   "docs",
@@ -27,10 +27,10 @@ exclude = [
   "thumbnail-light.svg",
 ]
 
-# [template]
-# path = "template"
-# entrypoint = "main.typ"
-# thumbnail = "thumbnail.png"
+[template]
+path = "template"
+entrypoint = "main.typ"
+thumbnail = "thumbnail.png"
 
 # [tool.mytool]
 # foo = "bar"
