--- a/typst.toml
+++ b/typst.toml
@@ -1,7 +1,7 @@
 # for a description of available keys, see https://github.com/typst/packages/?tab=readme-ov-file#package-format
 
 [package]
-name = "etikett"
+name = "etykett"
 version = "0.1.0"
 entrypoint = "src/lib.typ"
 authors = [
@@ -10,7 +10,7 @@ authors = [
 license = "MIT"
 description = "a template for printing onto label sheets with rectangular grids of labels"
 # homepage = ""
-repository = "https://github.com/SillyFreak/typst-etikett"
+repository = "https://github.com/SillyFreak/typst-etykett"
 keywords = ["printing", "label"]
 categories = ["layout", "office"]
 disciplines = []
